Add interval for updating time to arrival (note: this is probably super inefficient to do, but it works for a tiny app of this size. Would likely come up with more elegnant interval solution if this was to be something that would scale.)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col">
                 <div class="jumbotron bg-dark text-center">
-                    <h1 class="text-light">Train Scheduler</h1>
+                    <h1 class="text-light">Train Schedule</h1>
                     <h4 class="text-light"><span id="current-time"></span></h4>
                 </div>
             </div>
